--- a/.github/workflows/release-docs.yml
+++ b/.github/workflows/release-docs.yml
@@ -3,8 +3,11 @@ on: workflow_dispatch
 
 jobs:
   build_and_deploy_job:
-    runs-on: ubuntu-latest
     name: Build and Deploy Job
+    runs-on: ubuntu-latest
+    env:
+      VITE_GA_ID: ${{ secrets.VITE_GA_ID }}
+      VITE_CALARIFY_ID: ${{ secrets.VITE_CALARIFY_ID }}
     steps:
       # Step 1: Checkout the repository
       - uses: actions/checkout@v3
