--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "license": "MIT",
   "type": "module",
   "workspaces": [
+    "apps/nuxt-app",
     "packages/config/*",
     "packages/sdk/*"
   ],
   "scripts": {
     "build": "yarn codegen &&  turbo build",
     "dev": "turbo dev",
+    "dev:test": "turbo dev --filter=test-app",
     "dev:nuxt": "turbo dev --filter=nuxt-app",
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
@@ -37,7 +39,7 @@
     "release": "yarn build:sdk && changeset version && changeset publish"
   },
   "lint-staged": {
-    "*.{ts,md,vue,js}": [
+    "*.{ts,md,js}": [
       "yarn format",
       "yarn lint"
     ]
