--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -26,6 +26,9 @@ jobs:
       GEINS_CMS_FAMILY: ${{ vars.GEINS_CMS_FAMILY }}
       GEINS_CMS_AREA: ${{ vars.GEINS_CMS_AREA }}
       GEINS_CMS_PAGE_ALIAS: ${{ vars.GEINS_CMS_PAGE_ALIAS }}
+      GEINS_OMS_SKUID1: ${{ vars.GEINS_OMS_SKUID1 }}
+      GEINS_OMS_SKUID2: ${{ vars.GEINS_OMS_SKUID2 }}
+      GEINS_OMS_SKUID3: ${{ vars.GEINS_OMS_SKUID3 }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
