--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "type": "module",
   "workspaces": [
-    "apps/nuxt-app",
+    "apps/*",
     "packages/config/*",
     "packages/sdk/*"
   ],
@@ -73,7 +73,7 @@
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
     "vite": "^5.4.11",
-    "vitepress": "^1.3.4",
+    "vitepress": "^1.5.0",
     "vitepress-plugin-mermaid": "^2.0.17"
   },
   "packageManager": "yarn@1.22.22",
@@ -83,5 +83,7 @@
   "resolutions": {
     "@algolia/client-search": "^4.24.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vitepress-plugin-group-icons": "^1.3.3"
+  }
 }
